--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="producto">
                     <img src="img/Service Name 2.jpg" alt="Producto 2">
                     <h3>Producto 2</h3>
-                    <p>Descripción del producto 2.</p>
+                    <p>Descripción del producto 2</p>
                     <button class="read-more-button">Leer Más</button>
                 </div>
         
