--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <div class="logo"><img src="img/Logo.webp" alt=""></div>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#AcercaDeClientes">Acerca de Clientes</a></li>
+                <li><a href="#AcercaDeClientes">Sobre nosotros</a></li>
+                <li><a href="#AcercaDeClientes">Clientes</a></li>
                 <li><a href="#PreguntasFrecuentes">Preguntas Frecuentes</a></li>
                 <li><a href="#Servicios">Servicios</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
