Avance de la página de reservasFREE

--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/sobre_nosotros.css"/>
     </head>
     <body>
-        <section>
+        <form action="https://formsubmit.co/62841099@certus.edu.pe" method="POST">
             <div class="row">
                 <h1>Nuestro Equipo</h1>
             </div>
@@ -51,7 +51,7 @@
                             <img src="img/profile-breysson.jpg">
                         </div>
                         <h3>Breysson Canales</h3>
-                        <p>Full Stack Developer</p>
+                        <p>Full Stack Senior Developer</p>
                         <div class="icons">
                             <a href="#">
                                 <i class="fab fa-twitter"></i>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </form>
     </body>
 </html>
 
