--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -15,6 +15,20 @@
         <link rel="stylesheet" href="css/sobre_nosotros.css"/>
     </head>
     <body>
+        <header>
+            <nav>
+                <div class="logo"><img src="img/Logo.webp"></div>
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#sobre_nosotros.html">Sobre nosotros</a></li>
+                    <li><a href="#AcercaDeClientes">Clientes</a></li>
+                    <li><a href="#PreguntasFrecuentes">Preguntas Frecuentes</a></li>
+                    <li><a href="#Servicios">Servicios</a></li>
+                    <li><a href="#Contacto">Contacto</a></li>
+                    <li><a href="#ReservaOnline">Reserva Online</a></li>
+                </ul>
+            </nav>
+        </header>
         <section>
             <div class="row">
                 <h1>Nuestro Equipo</h1>
@@ -92,6 +106,77 @@
                             <a href="#">
                                 <i class="fas fa-envelope"></i>
                             </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/profile-yamilet.jpg">
+                        </div>
+                        <h3>Breysson Canales</h3>
+                        <p>Full Stack Developer</p>
+                        <div class="icons">
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fas fa-envelope"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <div class="img-container">
+                            <img src="img/profile-breysson.jpg">
+                        </div>
+                        <h3>Breysson Canales</h3>
+                        <p>Full Stack Developer</p>
+                        <div class="icons">
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fas fa-envelope"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="collage">
+                <div class="half left">
+                    <img src="img/1_developer.jpg">
+                </div>
+                <div class="half right">
+                    <div class="grid">
+                        <div class="grid-item">
+                            <img src="img/developers.jpg">
+                        </div>
+                        <div class="grid-item">
+                            <img src="img/2_developer.jpg">
+                        </div>
+                        <div class="grid-item">
+                            <img src="img/3_developer.jpg">
+                        </div>
+                        <div class="grid-item">
+                            <img src="img/4_developer.jpg">
                         </div>
                     </div>
                 </div>
