pequeños errores y mandar una página a otra

--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -116,7 +116,7 @@
                         <div class="img-container">
                             <img src="img/profile-yamilet.jpg">
                         </div>
-                        <h3>Breysson Canales</h3>
+                        <h3>Yamilet Ayamamani</h3>
                         <p>Full Stack Developer</p>
                         <div class="icons">
                             <a href="#">
