--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <div class="logo"><img src="img/Logo.webp" alt=""></div>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="/technologi/sobre_nosotros.html">Sobre nosotros</a></li>
+                <li><a href="sobre_nosotros.html">Sobre nosotros</a></li>
                 <li><a href="#AcercaDeClientes">Clientes</a></li>
-                <li><a href="#PreguntasFrecuentes">Preguntas Frecuentes</a></li>
+                <li><a href="faq.html">Preguntas Frecuentes</a></li>
                 <li><a href="#Servicios">Servicios</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
-                <li><a href="#ReservaOnline">Reserva Online</a></li>
+                <li><a href="reservaFREE.html">Reserva Online</a></li>
             </ul>
         </nav>
             <div class="video-container">
