--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="/technologi/sobre_nosotros.html">Sobre nosotros</a></li>
                 <li><a href="#AcercaDeClientes">Clientes</a></li>
                 <li><a href="#PreguntasFrecuentes">Preguntas Frecuentes</a></li>
-                <li><a href="#Servicios">Servicios</a></li>
+                <li><a href="Servicios.html">Servicios</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
                 <li><a href="#ReservaOnline">Reserva Online</a></li>
             </ul>
