--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -19,13 +19,13 @@
             <nav>
                 <div class="logo"><img src="img/Logo.webp"></div>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#sobre_nosotros.html">Sobre nosotros</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="sobre_nosotros.html">Sobre nosotros</a></li>
                     <li><a href="#AcercaDeClientes">Clientes</a></li>
-                    <li><a href="#PreguntasFrecuentes">Preguntas Frecuentes</a></li>
-                    <li><a href="#Servicios">Servicios</a></li>
-                    <li><a href="#Contacto">Contacto</a></li>
-                    <li><a href="#ReservaOnline">Reserva Online</a></li>
+                    <li><a href="faq.html">Preguntas Frecuentes</a></li>
+                    <li><a href="Servicios.html">Servicios</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="reservaFREE.html">Reserva Online</a></li>
                 </ul>
             </nav>
         </header>
