--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=">
   <title>CONTACTO</title>
   <script src="https://kit.fontawesome.com/c32adfdcda.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./contacto.css">
+  <link rel="stylesheet" href="css/contacto.css">
 </head>
 <body>
   
