--- a/reservaFREE.html
+++ b/reservaFREE.html
@@ -69,7 +69,7 @@
                 </div>
         
                 <div class="card-content">
-                    <h3>Ciberseguridad</h3>
+                    <h3>Soporte Técnico</h3>
                     <form>
                         <div class ="form-row">
                             <label for="name">Nombre:</label>
