--- a/reservaFREE.html
+++ b/reservaFREE.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="css/reservasFREE.css"/>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="logo"><img src="img/Logo.webp"></div>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="sobre_nosotros.html">Sobre nosotros</a></li>
+                <li><a href="#AcercaDeClientes">Clientes</a></li>
+                <li><a href="faq.html">Preguntas Frecuentes</a></li>
+                <li><a href="Servicios.html">Servicios</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="reservaFREE.html">Reserva Online</a></li>
+            </ul>
+        </nav>
+    </header>
     <form action="https://formsubmit.co/62841099@certus.edu.pe" method="POST">
         <section class="banner">
             <h2>Servicios de Reserva</h2>
