Backend de Users de RealizarSource

--- a/usuarios.html
+++ b/usuarios.html
@@ -83,7 +83,7 @@
             <label for="dni_buscar" class="form-label">Ingrese el DNI del Usuario:</label>
             <input type="number" id="dni_buscar" class="form-control">
             <br>
-            <button onclick="buscardni()" class="btn btn-primary">Buscar por DNI</button>
+            <button onclick="buscardniUsers()" class="btn btn-primary">Buscar por DNI</button>
         </div>
 
         <!-- buscar por Apellido -->
@@ -91,7 +91,7 @@
             <label for="apellido_buscar" class="form-label">Ingrese el Apellido:</label>
             <input type="text" id="apellido_buscar" class="form-control">
             <br>
-            <button onclick="buscarApellido()" class="btn btn-primary">Buscar por Apellido</button>
+            <button onclick="buscarApellidoUsers()" class="btn btn-primary">Buscar por Apellido</button>
         </div>
 
         <!-- buscar por Correo -->
@@ -99,7 +99,7 @@
             <label for="correo_buscar" class="form-label">Ingrese el Correo:</label>
             <input type="text" id="correo_buscar" class="form-control">
             <br>
-            <button onclick="buscarCorreo()" class="btn btn-primary">Buscar por Correo</button>
+            <button onclick="buscarCorreoUsers()" class="btn btn-primary">Buscar por Correo</button>
         </div>
 
         <table id="tabla_busqueda" class="table table-bordered mt-3">
